--- a/notebooks/lezione1.ipynb
+++ b/notebooks/lezione1.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -111,7 +113,7 @@
    "outputs": [],
    "source": [
     "# path = \"data/dogscats/\"\n",
-    "path = \"data/dogscats/sample/\""
+    "path = \"../data/dogscats/sample/\""
    ]
   },
   {
